src/test/resources/testcases/invalid/types/void_cond_if.tc
void foo() {
    return;
}
int main() {
    if (foo()) { // Error: conditional expression cannot be void
        return 1;
    }
    return 0;
}
